# OmniSenseHome

./: .gitignore  CMakeLists.txt  LICENSE  OmniSenseHome.ota  README.md  my_index.json
.github/workflows/: OTA-release.yml
Dokumentation/: Config_File.md  OTA.md  Sensoren.md
Dokumentation/LED Helligkeit/: Helligkeitsfunktion.md  Wurzelfunktion.py
OTAcreate/: esp_delta_ota_patch_gen.py  readme.md
components/MTS4x/: MTS4x.cpp
components/arduino-esp32-3.2.1/: CMakeLists.txt
components/arduino-esp32-3.2.1/libraries/Zigbee/src/: ZigbeeHandlers.cpp  esp_delta_ota_ops.c
main/: CMakeLists.txt  RGB.cpp  RGB.h  Sensoren.cpp  WiFi_AP_Server.cpp  WiFi_AP_Server.h  configLoader.h  main.cpp
